--- a/JavaApplication11/src/tela/listagem/ListagemInse.form
+++ b/JavaApplication11/src/tela/listagem/ListagemInse.form
@@ -64,7 +64,7 @@
           <Font name="Tahoma" size="24" style="1"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="99" green="0" red="66" type="rgb"/>
+          <Color blue="ff" green="0" id="magenta" palette="1" red="ff" type="palette"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Listagem Insemina&#xe7;&#xe3;o"/>
       </Properties>
